--- a/index.html
+++ b/index.html
@@ -303,6 +303,6 @@
               <p class="text-secondary">Copyright &copy; Your website 2021</p>
        </footer>
        <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-      <script src="/script.js"></script>
+      <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
